force-app/main/default/objects/NCMT_Housing_Plan_Option_Template__c/NCMT_Housing_Plan_Option_Template__c.object-meta.xml
<CustomObject>
    <description>The NCMT Housing Plan Option Choices related to a template are displayed on the NCMT Housing Plan Option Selection page, filtered by the Record Type.</description>
    <label>NCMT Housing Plan Option Template</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>NCMT Housing Plan Option Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Housing Plan Option Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>