force-app/main/default/objects/NCMT_Housing_Plan_Option_Template__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Sets the order of the Type when all related Options are displayed (options are grouped by Type).</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>