force-app/main/default/objects/NCMT_Housing_Plan_Option_Template__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Housing_Plan_Cost_Sub_Types</valueSetName>
    </valueSet>
</CustomField>