force-app/main/default/objects/NCMT_Housing_Plan_Option_Template__c/recordTypes/Other_Cost.recordType-meta.xml
<RecordType>
    <fullName>Other_Cost</fullName>
    <active>true</active>
    <label>Other Cost</label>
</RecordType>